# Realtime_AAD_on_GPU

./: AADTypes.h  CMakeLists.txt  COLLEGE_SERVER_GUIDE.md  DEPLOYMENT_GUIDE.md  GPUAADTape.h  PortfolioTypes.h  README.md  RealTimePortfolioEngine.cpp  RealTimePortfolioEngine.h  build.sh  build_compatible.sh  build_cpu_only.sh  complete_realtime_system.py  cpu_fallback.h  cuda_kernels.cu  cuda_kernels_cpu.cpp  cuda_wrapper.h  debug_build.sh  debug_cuda.sh  fix_cuda_compatibility.sh  gpu_portfolio_interface.py  live_options_fetcher.py  main.cpp  minimal_test.cpp  options_data_feed.py  portfolio_demo.cpp  python_gpu_interface.cpp  python_gpu_interface.h  quick_build.sh  readme.md  realtime02.py  realtime_portfolio_system.py  requirements.txt  safe_gpu_interface.py  server_portfolio_system.py  setup_cuda_env.sh  setup_user_space.sh  struct_test.cpp  test_compilation.sh  test_cuda_setup.sh  (+5 more)
AAD/: Makefile  Readme  setup_colab.sh
AAD/include/: AADTypes.h  GPUAADNumber.h  GPUAADTape.h  device_aad.cuh  python_gpu_interface.h
AAD/py/: gpu_aad_wrapper.py  gpu_monitor.py  market_data.py  realtime_risk_system.py
AAD/src/: GPUAADNumber.cpp  GPUAADTape.cpp  blackscholes_aad_kernel.cu  main.cpp  python_gpu_interface.cpp
include/: AADTypes.h  GPUAADNumber.h
python/: RT.py  gpu_portfolio_interface.py  live_options_fetcher.py  mathematical_analysis.py  performance_analyzer.py  rt-2.py  safe_gpu_interface.py
src/: cuda_kernels.cu  main.cpp  python_gpu_interface.h
tests/: run_comprehensive_analysis.py
